@@ -8,6 +8,10 @@
    style.
  - Add basic tests.
 
+ [Error::Pure::HTTP::JSON::Advance]
+ - Fix warning with chomp on undefined value. Fix to standard Error::Pure
+   style.
+
 0.03 2013-09-21
  - Add dependency for perl (based on Error::Pure).
  - Rewrite Changes file to CPAN::Changes::SPEC format.
